--- a/index.html
+++ b/index.html
@@ -16,16 +16,45 @@
     </head>
     <body background="background1.jpg">
         <center>
-    <h3 class="btn btn-warning heading">AI PING PONG GAME <button id="buttonpp">Instructions</button></h3>
+    <h3 class="btn btn-warning heading">AI PING PONG GAME <button class="btn btn-primary" data-toggle="modal" data-target="#myModal" id="buttonpp">Instructions</button></h3>
         <br>
         <br>
-        <button class="btn btn-success">PLAY GAME</button>        
+        <button class="btn btn-success" >PLAY GAME</button>        
         <br>
         <br>
         <h1 class="btn btn-danger"></h1>
         <br>
         <br>
-        <div></div>
+        <button class="btn btn-info" onclick="btnrestart()">restart</button>
+        <br>
+        <br>
+        <div id="canvas"></div>
+     <div id="game_console"></div>
+     <h4>
+       Source Code : <a href="https://github.com/linuk">Linuk</a>|| Game Credit : Mario
+     </h4>
+     <div id="myModal" class="modal fade">
+       <div class="modal-dialog">https://github.com/SkyBlox152/Project138/blob/main/index.html
+         <div class="modal-content">
+           <div id="modal-header">
+             <button class="close" data-dismiss="modal">X</button> 
+             <h4>Instructions</h4>
+           </div>
+           <div id="modal-body">
+             <img src="" class="instruction_image">
+             <img src="" class="instruction_image">
+             <img src="" class="instruction_image">
+           </div>
+           <div class="modal-footer">
+             <button class="btn btn-primary" data-dismiss="modal"> Close</button>
+           </div>
+         </div>
+       </div>
+     </div>
+
+     <div class="footer">
+       <h4>made by- Howell</h4>
+     </div>
         </center>
         <script src="main.js"></script>
     </body>
